# shorty

./: .gitignore  README.md  pyproject.toml  tailwind.config.js
docs/: api.rst  conf.py  db.rst  development.rst  index.rst  requirements.txt  routes.rst  usage.rst
migrations/versions/: 7c4877878822_.py
shorty/: __init__.py  __main__.py  _app.py  db.py  default.cfg  helpers.py  routes.py
shorty/static/: main.js  tailwind.css
shorty/templates/: 404.html  base.html  front.html  privacy.html  stats.html
